--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "form-check-input",
   "version": "0.0.1",
   "description": "an input which automatically check the input word",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "webpack",
@@ -25,11 +25,13 @@
   "homepage": "https://github.com/Alfxjx/form-check-input#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
+  },
+  "dependencies": {
+    "babel-loader": "^7.1.5"
   }
 }
