--- a/docs/.babelrc
+++ b/docs/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["es2015", "latest"],
-  "plugins": []
+  "presets": [
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": [
+            "last 2 versions",
+            "safari >= 7"
+          ]
+        }
+      }
+    ]
+  ]
 }
