--- a/docs/package.json
+++ b/docs/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "form-check-input",
+  "name": "form-check",
   "version": "0.0.1",
   "description": "an input which automatically check the input word",
   "main": "./src/index.js",
   "scripts": {
+    "prebuild": "npm run clean",
+    "pre:commit": "yarn build",
+    "build": "npm run rollup & npm run rollup:production",
+    "build:watch": "npm run rollup -- --watch",
+    "clean": "del-cli \"dist/**/*\"",
+    "rollup": "rollup --config",
+    "rollup:production": "cross-env NODE_ENV=production npm run rollup",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "webpack",
     "example": "http-server -p 6324"
   },
   "repository": {
@@ -24,14 +30,13 @@
   },
   "homepage": "https://github.com/Alfxjx/form-check-input#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5"
-  },
-  "dependencies": {
-    "babel-loader": "^7.1.5"
+    "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.3",
+    "del-cli": "^1.1.0",
+    "rollup": "^0.53.0",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-uglify": "^2.0.1",
+    "babel-cli": "^6.26.0",
+    "rollup-watch": "^4.3.1"
   }
 }
